--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <head>
 
   <title>Portfolio</title>
-  <link href="style.css" rel="stylesheet" type="text/css" /> 
+  
+  <link href="style.css" rel="stylesheet" type="text/css">
   
   <!-- IMAGE POSITIONING -->
   
@@ -25,7 +26,7 @@
     <header class="header">
        <h1>Andre Smith</h1>
         <h3>Software Developer</h3>
-          <img src="images/portrait.jpg"width="200"class="portrait">
+          <img src="images/portrait.jpg" width="200" alt= "portrait at beach" class="portrait">
             <nav class="navbar">
                 <a href="https://github.com/aadotsmithh">GitHub</a>  
                 <a href="https://linkedin.com/in/asmith98">LinkedIn</a>
